add program-section also mobile responsive

--- a/index.html
+++ b/index.html
@@ -185,6 +185,43 @@
                   </div>
             </div>
         </section>
+
+
+        <!-- program-section -->
+
+        <section class="my-10 lg:my-24">
+            <div class="text-center py-8 border-dashed border border-x-0">
+                <h2 class="text-neutral-900 text-4xl font-extrabold">Program Sections</h2>
+                <p class="text-neutral-900 pt-6 ">Nurture the future stars of the ice with our Youth Development Program. Elevate your game in our Junior League, where competitive spirit meets camaraderie. </p>
+            </div>
+
+
+
+            <div>
+                <!-- first two pic  -->
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <div class="p-5 lg:p-10 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/2.png')] bg-no-repeat bg-center bg-cover rounded-2xl ">
+                       <h2 class="font-extrabold text-2xl text-white">Junior Program</h2>
+                       <p class="py-4 text-white">Nurture the future stars of the ice with our Youth Development Program. Designed for young aspiring hockey players, this program focuses on skill development, sportsmanship, and fostering a love for the game. </p>
+                        <button class="btn outline-0 border-0 text-white text-xl font-bold bg-red-500">Register Now!</button>
+                    </div>
+
+                    <div class="p-5 lg:p-10 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/3.png')] bg-no-repeat bg-center bg-cover rounded-2xl">
+                        <h2 class="font-extrabold text-2xl text-white">Teenager Program</h2>
+                        <p class="py-4 text-white">Nurture the future stars of the ice with our Youth Development Program. Designed for young aspiring hockey players, this program focuses on skill development, sportsmanship, and fostering a love for the game. </p>
+                         <button class="btn outline-0 border-0 text-white text-xl font-bold bg-red-500">Register Now!</button> 
+                     </div>
+                </div>
+
+                <!-- last pic  -->
+                <div class="mt-6 p-5 lg:px-10 lg:pt-44 lg:pb-10 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/4.png')] bg-no-repeat bg-center bg-cover rounded-2xl">
+                    <h2 class="font-extrabold text-2xl text-white">Professional Program</h2>
+                    <p class="py-4 text-white lg:w-3/5">For seasoned players seeking high-level competition, our Senior Teams offer a platform to showcase skill, strategy, and teamwork. Represent in regional and national tournaments, and be part of a legacy built on excellence.</p>
+                     <button class="btn outline-0 border-0 text-white text-xl font-bold bg-red-500">Register Now!</button> 
+                 </div>
+
+            </div>
+        </section>
     </main>
     <footer></footer>
   </body>
