add more styles

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
-                                Private Lessons
+                                Ski Touring
                             </div>
                             <div class="collapse-content"> 
                               <p>hello</p>
@@ -449,7 +449,7 @@
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
-                                Private Lessons
+                                Booking
                             </div>
                             <div class="collapse-content"> 
                               <p>hello</p>
@@ -459,7 +459,7 @@
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
-                                Private Lessons
+                                Pricing
                             </div>
                             <div class="collapse-content"> 
                               <p>hello</p>
