add footer section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body class="m-0 p-0 box-border font-manrope">
     <header class="container mx-auto lg:px-32 px-5 mb-10 lg:mb-24">
         <!-- navbar -->
-      <nav class="mt-12 mb-12">
+      <nav class="mt-6 lg:mt-12 mb-6 lg:mb-12">
         <div class="navbar ">
           <div class="navbar-start">
             <div class="dropdown">
@@ -131,7 +131,7 @@
         <section>
             <div class="text-center py-8 border-dashed border border-x-0">
                 <h2 class="text-neutral-900 text-4xl font-extrabold">Professional Hockeys Club</h2>
-                <p class="text-neutral-900 pt-6 ">The best clubs aim to give every player the best experience of our sport making more, better, happier players in a sustainable club environment </p>
+                <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">The best clubs aim to give every player the best experience of our sport making more, better, happier players in a sustainable club environment </p>
             </div>
 
 
@@ -192,7 +192,7 @@
         <section class="my-10 lg:my-24">
             <div class="text-center py-8 border-dashed border border-x-0">
                 <h2 class="text-neutral-900 text-4xl font-extrabold">Program Sections</h2>
-                <p class="text-neutral-900 pt-6 ">Nurture the future stars of the ice with our Youth Development Program. Elevate your game in our Junior League, where competitive spirit meets camaraderie. </p>
+                <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">Nurture the future stars of the ice with our Youth Development Program. Elevate your game in our Junior League, where competitive spirit meets camaraderie. </p>
             </div>
 
 
@@ -228,7 +228,7 @@
           <section class="mb-10 lg:mb-24">
             <div class="text-center py-8 border-dashed border border-x-0">
                 <h2 class="text-neutral-900 text-4xl font-extrabold">Our New Products</h2>
-                <p class="text-neutral-900 pt-6 ">we are thrilled to unveil our latest range of cutting-edge hockey products designed to elevate your game and showcase your passion for the sport. </p>
+                <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">we are thrilled to unveil our latest range of cutting-edge hockey products designed to elevate your game and showcase your passion for the sport. </p>
             </div>
 
 
@@ -392,7 +392,7 @@
           <section class="mb-10 lg:mb-24">
             <div class="text-center py-8 border-dashed border border-x-0">
                 <h2 class="text-neutral-900 text-4xl font-extrabold">Clients Question</h2>
-                <p class="text-neutral-900 pt-6 ">welcomes players of all age groups, from youth development programs to senior teams.  </p>
+                <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">welcomes players of all age groups, from youth development programs to senior teams.  </p>
             </div>
 
 
@@ -480,7 +480,7 @@
           <section >
             <div class="text-center py-8 border-dashed border border-x-0">
                 <h2 class="text-neutral-900 text-4xl font-extrabold">Get In Touch</h2>
-                <p class="text-neutral-900 pt-6 ">Welcome to the heart of our hockey community! Whether you're a passionate player, a dedicated fan, or someone looking to connect with , we're thrilled to hear from you. </p>
+                <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">Welcome to the heart of our hockey community! Whether you're a passionate player, a dedicated fan, or someone looking to connect with , we're thrilled to hear from you. </p>
             </div>
 
             
@@ -565,6 +565,45 @@
           </section>
 
     </main>
-    <footer></footer>
+    
+<!-- footer -->
+    <footer class="footer p-5 lg:px-32 lg:py-24 bg-base-200 text-base-content container mx-auto bg-neutral-900 flex flex-col lg:flex-row ">
+      <div class="mx-auto lg:mx-0 text-center lg:text-left">
+        <aside class="">
+          <h2 class="text-white text-3xl font-extrabold">Get In Touch</h2>
+          <p  class="text-white text-opacity-60 pt-4 pb-6">Welcome to the heart of our hockey community!</p>
+          <p class="text-white text-opacity-60"><i class="fa-regular fa-envelope mr-4 text-red-500"></i>hockeys@support.com</p>
+          <p class="text-white text-opacity-60"><i class="fa-solid fa-phone mr-4 text-red-500 pt-4"></i>(+62) 123-321-543</p>
+  
+        </aside>
+      </div> 
+      <div class="flex gap-12 lg:gap-24 mx-auto text-center lg:text-left">
+        <nav class="text-white text-opacity-60 flex flex-col space-y-2">
+          <header class="footer-title text-white text-lg font-bold">Company</header> 
+          <a class="link link-hover ">About us</a>
+          <a class="link link-hover">Leadership</a>
+          <a class="link link-hover">Careers</a>
+          <a class="link link-hover">News & Article</a>
+          <a class="link link-hover">Legal Notice</a>
+        </nav> 
+        <nav class="text-white text-opacity-60 flex flex-col space-y-2">
+          <header class="footer-title text-white text-lg font-bold ">Support</header> 
+          <a class="link link-hover">Help Center</a>
+          <a class="link link-hover">FAQ Ticket</a>
+          <a class="link link-hover">Support</a>
+          <a class="link link-hover">Contact Us</a>
+        </nav>
+      </div> 
+      <div class=" mx-auto text-center lg:text-left">
+        <nav class="text-white text-opacity-60  flex flex-col space-y-2">
+          <header class="footer-title text-white text-lg font-bold">Services</header> 
+          <a class="link link-hover">Academy</a>
+          <a class="link link-hover">Group Lesson</a>
+          <a class="link link-hover">Private Lesson</a>
+          <a class="link link-hover">Hockeys for kids</a>
+          <a class="link link-hover">Hockeys for Adult</a>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
