add some responsive style

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                 
               </div>
         
-
-        <div class="bg-neutral-900  lg:w-[450px] p-8 rounded-2xl static lg:absolute lg:bottom-10 lg:right-10 mt-4">
-            <h2 class="text-white text-2xl font-extrabold">Meet all the heroes from the field</h2>
-            <p class="text-white">Well done to all who played! All players were respectful and showed outstanding sportsmanship towards other players and officials. </p>
+                <!-- meet all -->
+        <div class="bg-neutral-900   lg:w-[450px] p-8 rounded-2xl static lg:absolute lg:bottom-10 lg:right-10 mt-4">
+            <h2 class="text-white text-lg lg:text-2xl font-extrabold">Meet all the heroes from the field</h2>
+            <p class="text-white text-sm lg:text-base">Well done to all who played! All players were respectful and showed outstanding sportsmanship towards other players and officials. </p>
         </div>
       </div>
 
@@ -417,52 +417,57 @@
                               <p>Experience the thrill of speed with our  dynamic power skates.</p>
                             </div>
                           </div>
+                          <hr>
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
                                 Hockey Training
                             </div>
                             <div class="collapse-content"> 
-                              <p>hello</p>
+                              <p>Players work on improving their ability to control and maneuver the puck or ball using their hockey sticks.</p>
                             </div>
                           </div>
+                          <hr>
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
                                 Private Lessons
                             </div>
                             <div class="collapse-content"> 
-                              <p>hello</p>
+                              <p>Private lessons for hockey players can be an excellent way to accelerate skill development .</p>
                             </div>
                           </div>
 
+                          <hr>
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
                                 Ski Touring
                             </div>
                             <div class="collapse-content"> 
-                              <p>hello</p>
+                              <p>Unlike downhill skiing, ski touring involves both ascending and descending slopes.</p>
                             </div>
                           </div>
 
+                          <hr>
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
                                 Booking
                             </div>
                             <div class="collapse-content"> 
-                              <p>hello</p>
+                              <p>Start by reaching out to the hockey club of interest.</p>
                             </div>
                           </div>
 
+                          <hr>
                           <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" /> 
                             <div class="collapse-title text-xl font-medium">
                                 Pricing
                             </div>
                             <div class="collapse-content"> 
-                              <p>hello</p>
+                              <p>Hockey players are typically responsible for purchasing their own equipment, including skates, sticks, helmets, pads, and jerseys.</p>
                             </div>
                           </div>
 
