--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <!-- col-1 -->
                 <div class="card ">
                     <figure class="mt-5 lg:mt-10">
-                        <div class="radial-progress text-red-500" style="--value:87;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold">87%</span></div>
+                        <div class="radial-progress rotate-90 text-red-500" style="--value:87;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold -rotate-90">87%</span></div>
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title text-neutral-900 text-xl font-semibold">Prayer Facility</h2>
@@ -151,7 +151,7 @@
                   <!-- col-2 -->
                 <div class="card ">
                     <figure class="mt-5 lg:mt-10">
-                        <div class="radial-progress text-emerald-400" style="--value:95;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold">95%</span></div>
+                        <div class="radial-progress text-emerald-400 rotate-90" style="--value:95;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold -rotate-90">95%</span></div>
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title text-neutral-900 text-xl font-semibold">Experienced Coach</h2>
@@ -163,7 +163,7 @@
                   <!-- col-3 -->
                 <div class="card ">
                     <figure class="mt-5 lg:mt-10">
-                        <div class="radial-progress text-amber-300" style="--value:90;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold">90%</span></div>
+                        <div class="radial-progress text-amber-300 rotate-90" style="--value:90;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold -rotate-90">90%</span></div>
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title text-neutral-900 text-xl font-semibold">Senior Player</h2>
@@ -175,7 +175,7 @@
                   <!-- col-4 -->
                 <div class="card ">
                     <figure class="mt-5 lg:mt-10">
-                        <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold">80%</span></div>
+                        <div class="radial-progress text-blue-500 rotate-90" style="--value:80;" role="progressbar"><span class="text-neutral-900 text-lg font-extrabold -rotate-90">80%</span></div>
                     </figure>
                     <div class="card-body items-center text-center">
                       <h2 class="card-title text-neutral-900 text-xl font-semibold">Training Ground</h2>
