add more responsive styles

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!--hockeys-club-section  -->
         <section>
             <div class="text-center py-8 border-dashed border border-x-0">
-                <h2 class="text-neutral-900 text-4xl font-extrabold">Professional Hockeys Club</h2>
+                <h2 class="text-neutral-900 text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h2>
                 <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">The best clubs aim to give every player the best experience of our sport making more, better, happier players in a sustainable club environment </p>
             </div>
 
@@ -191,7 +191,7 @@
 
         <section class="my-10 lg:my-24">
             <div class="text-center py-8 border-dashed border border-x-0">
-                <h2 class="text-neutral-900 text-4xl font-extrabold">Program Sections</h2>
+                <h2 class="text-neutral-900 text-2xl lg:text-4xl font-extrabold">Program Sections</h2>
                 <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">Nurture the future stars of the ice with our Youth Development Program. Elevate your game in our Junior League, where competitive spirit meets camaraderie. </p>
             </div>
 
@@ -200,13 +200,13 @@
             <div class="pt-12">
                 <!-- first two pic  -->
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                    <div class="p-5 lg:p-10 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/2.png')] bg-no-repeat bg-center bg-cover rounded-2xl ">
+                    <div class="p-5 lg:px-10 lg:pb-10 lg:pt-20 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/2.png')] bg-no-repeat bg-center bg-cover rounded-2xl ">
                        <h2 class="font-extrabold text-2xl text-white">Junior Program</h2>
                        <p class="py-4 text-white">Nurture the future stars of the ice with our Youth Development Program. Designed for young aspiring hockey players, this program focuses on skill development, sportsmanship, and fostering a love for the game. </p>
                         <button class="btn outline-0 border-0 text-white text-xl font-bold bg-red-500">Register Now!</button>
                     </div>
 
-                    <div class="p-5 lg:p-10 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/3.png')] bg-no-repeat bg-center bg-cover rounded-2xl">
+                    <div class="p-5 lg:px-10 lg:pb-10 lg:pt-20 w-full bg-[linear-gradient(0deg,rgba(19,19,24,0.50),rgba(19,19,24,0.50)),url('./images/3.png')] bg-no-repeat bg-center bg-cover rounded-2xl">
                         <h2 class="font-extrabold text-2xl text-white">Teenager Program</h2>
                         <p class="py-4 text-white">Nurture the future stars of the ice with our Youth Development Program. Designed for young aspiring hockey players, this program focuses on skill development, sportsmanship, and fostering a love for the game. </p>
                          <button class="btn outline-0 border-0 text-white text-xl font-bold bg-red-500">Register Now!</button> 
@@ -227,7 +227,7 @@
 
           <section class="mb-10 lg:mb-24">
             <div class="text-center py-8 border-dashed border border-x-0">
-                <h2 class="text-neutral-900 text-4xl font-extrabold">Our New Products</h2>
+                <h2 class="text-neutral-900 text-2xl lg:text-4xl font-extrabold">Our New Products</h2>
                 <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">we are thrilled to unveil our latest range of cutting-edge hockey products designed to elevate your game and showcase your passion for the sport. </p>
             </div>
 
@@ -391,7 +391,7 @@
 
           <section class="mb-10 lg:mb-24">
             <div class="text-center py-8 border-dashed border border-x-0">
-                <h2 class="text-neutral-900 text-4xl font-extrabold">Clients Question</h2>
+                <h2 class="text-neutral-900 text-2xl lg:text-4xl font-extrabold">Clients Question</h2>
                 <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">welcomes players of all age groups, from youth development programs to senior teams.  </p>
             </div>
 
@@ -484,7 +484,7 @@
 
           <section >
             <div class="text-center py-8 border-dashed border border-x-0">
-                <h2 class="text-neutral-900 text-4xl font-extrabold">Get In Touch</h2>
+                <h2 class="text-neutral-900 text-2xl lg:text-4xl font-extrabold">Get In Touch</h2>
                 <p class="text-neutral-900 pt-6 w-full mx-auto lg:w-9/12">Welcome to the heart of our hockey community! Whether you're a passionate player, a dedicated fan, or someone looking to connect with , we're thrilled to hear from you. </p>
             </div>
 
@@ -528,7 +528,7 @@
                         <!-- input-2 -->
                         <div >
                             <h3 class="text-neutral-900 text-xl font-bold pb-4">Your Email</h3>
-                            <input class="w-full p-5 rounded-xl border-0 outline-0 bg-[#F8F8F8]" type="text" placeholder="Enter your email">
+                            <input class="w-full p-5 rounded-xl border-0 outline-0 bg-[#F8F8F8]" type="email" placeholder="Enter your email">
                         </div>
 
                         <!-- input-3 -->
@@ -540,7 +540,7 @@
                         <!-- input-4 -->
                         <div >
                             <h3 class="text-neutral-900 text-xl font-bold pb-4">Phone Number</h3>
-                            <input class="w-full p-5 rounded-xl border-0 outline-0 bg-[#F8F8F8]" type="text" placeholder="Enter your phone number">
+                            <input class="w-full p-5 rounded-xl border-0 outline-0 bg-[#F8F8F8]" type="number" placeholder="Enter your phone number">
                         </div>
 
                     </div>
@@ -572,19 +572,19 @@
     </main>
     
 <!-- footer -->
-    <footer class="footer p-5 lg:px-32 lg:py-24 bg-base-200 text-base-content container mx-auto bg-neutral-900 flex flex-col lg:flex-row ">
+    <footer class="footer p-5 lg:px-32 lg:py-24 bg-base-200 text-base-content container mx-auto bg-neutral-900 flex justify-between flex-col lg:flex-row ">
       <div class="mx-auto lg:mx-0 text-center lg:text-left">
         <aside class="">
-          <h2 class="text-white text-3xl font-extrabold">Get In Touch</h2>
+          <h2 class="text-white text-2xl lg:text-3xl font-extrabold">Get In Touch</h2>
           <p  class="text-white text-opacity-60 pt-4 pb-6">Welcome to the heart of our hockey community!</p>
           <p class="text-white text-opacity-60"><i class="fa-regular fa-envelope mr-4 text-red-500"></i>hockeys@support.com</p>
           <p class="text-white text-opacity-60"><i class="fa-solid fa-phone mr-4 text-red-500 pt-4"></i>(+62) 123-321-543</p>
   
         </aside>
       </div> 
-      <div class="flex gap-12 lg:gap-24 mx-auto text-center lg:text-left">
+      <div class="flex gap-12 lg:gap-36 mx-auto text-center lg:text-left">
         <nav class="text-white text-opacity-60 flex flex-col space-y-2">
-          <header class="footer-title text-white text-lg font-bold">Company</header> 
+          <header class="footer-title text-white opacity-100 text-lg font-bold">Company</header> 
           <a class="link link-hover ">About us</a>
           <a class="link link-hover">Leadership</a>
           <a class="link link-hover">Careers</a>
@@ -592,7 +592,7 @@
           <a class="link link-hover">Legal Notice</a>
         </nav> 
         <nav class="text-white text-opacity-60 flex flex-col space-y-2">
-          <header class="footer-title text-white text-lg font-bold ">Support</header> 
+          <header class="footer-title text-white text-lg font-bold opacity-100">Support</header> 
           <a class="link link-hover">Help Center</a>
           <a class="link link-hover">FAQ Ticket</a>
           <a class="link link-hover">Support</a>
@@ -601,7 +601,7 @@
       </div> 
       <div class=" mx-auto text-center lg:text-left">
         <nav class="text-white text-opacity-60  flex flex-col space-y-2">
-          <header class="footer-title text-white text-lg font-bold">Services</header> 
+          <header class="footer-title text-white text-lg font-bold opacity-100">Services</header> 
           <a class="link link-hover">Academy</a>
           <a class="link link-hover">Group Lesson</a>
           <a class="link link-hover">Private Lesson</a>
